--- a/Fundamentals/Fundamentals.csproj
+++ b/Fundamentals/Fundamentals.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Conditionals.cs" />
+    <Compile Include="Loops.cs" />
     <Compile Include="TypeConversion.cs" />
     <Compile Include="Variables.cs" />
     <Compile Include="Operators.cs" />
