--- a/ConsoleApplication1/OOPS1.csproj
+++ b/ConsoleApplication1/OOPS1.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Attributes.cs" />
     <Compile Include="DelegatesAsFunctionParams.cs" />
+    <Compile Include="GenericsDemo.cs" />
     <Compile Include="LateBindingDemo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
